# Lunaria

./: .gitignore  Cargo.toml  README.md  makefile  testdb.json
frontend/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: AddItem.svelte  ItemDisplay.svelte  QueryPanel.svelte  SingleItemPanel.svelte
frontend/src/routes/: +page.svelte
frontend/static/: util.js
src/: budget.rs  database.rs  handlers.rs  main.rs
