[package]
name = "simple-budget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
chrono = {version = "0.4.23", features = ["serde"]}
env_logger = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.92"
